# ferox-audio-sim

./: .env.example  .gitignore  CLAUDE.md  DEV_LOG.md  README.md
config/: cyclonedds.xml.template
docker/: Dockerfile  entrypoint-dds.sh
scripts/: build.sh  start.sh  test_echo.sh
src/ferox_audio_msgs/: CMakeLists.txt  package.xml
src/ferox_audio_msgs/msg/: AudioChunk.msg
src/ferox_audio_sim/: package.xml  setup.cfg  setup.py
src/ferox_audio_sim/config/: audio_bridge.yaml
src/ferox_audio_sim/ferox_audio_sim/: audio_bridge_node.py
src/ferox_audio_sim/launch/: audio_bridge.launch.py
